commiting updated code

--- a/about.html
+++ b/about.html
@@ -4,33 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <div class="bg-[url('images/team.jpg')] bg-cover bg-center h-screen text-white">
-        <h1>About Us</h1>
+    <div class="bg-purple-800 h-screen text-white">
+        <h1 class="text-center text-4xl font-bold pt-10">About Us</h1>
+        <div class="flex flex-col sm:flex-row justify-evenly items-center h-full px-10 gap-y-10 sm:gap-y-0 sm:gap-x-8">
+            <div class="max-w-md">
+                <h2 class="text-3xl font-bold mb-4">The Idea</h2>
+                <p class="text-lg leading-relaxed">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, in! Architecto quos nesciunt ab ratione sit! Adipisci, saepe suscipit. Id a perspiciatis libero dicta, accusamus consequatur sit. Repellat, reiciendis consectetur!
+                    Itaque a alias dolores consectetur repudiandae nemo debitis praesentium eum ullam? Ex aliquid qui cumque, dolor, tempore aspernatur vitae sunt corporis velit iusto a? Soluta tempore accusamus dolor illum voluptatum.
+                </p>
+            </div>
 
-        <div>
-            <h1>The Idea</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, in! Architecto quos nesciunt ab ratione sit! Adipisci, saepe suscipit. Id a perspiciatis libero dicta, accusamus consequatur sit. Repellat, reiciendis consectetur!
-        Itaque a alias dolores consectetur repudiandae nemo debitis praesentium eum ullam? Ex aliquid qui cumque, dolor, tempore aspernatur vitae sunt corporis velit iusto a? Soluta tempore accusamus dolor illum voluptatum.
-        Atque ab magni illo. Aliquid quia vitae voluptatum beatae sit voluptatem deleniti temporibus nostrum quas. Amet temporibus quia nam deleniti assumenda tenetur et? Nulla voluptas nemo vero quas, omnis veritatis.
-        Quidem officia nostrum, facilis, quod, suscipit iste deserunt inventore optio unde repellendus expedita necessitatibus beatae eligendi rem velit laboriosam qui excepturi voluptas nemo harum ullam ut fuga adipisci ipsa! A?
-        Cum, unde. Placeat corporis modi ratione temporibus illo sint, accusantium reprehenderit? Quaerat animi amet, maiores recusandae adipisci quis perferendis excepturi pariatur consequuntur illo dignissimos voluptate! Impedit, iste. Adipisci, deleniti illum.</p>
+            <div class="max-w-md">
+                <h2 class="text-3xl font-bold mb-4">Team</h2>
+                <p class="text-lg leading-relaxed">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nesciunt animi explicabo maiores quas temporibus ipsam a illum rem autem. Consequuntur quibusdam, recusandae ullam at aliquid nesciunt possimus sunt odit!
+                </p>
+            </div>
+
+            <div class="max-w-md">
+                <h2 class="text-3xl font-bold mb-4">Collaborations</h2>
+                <p class="text-lg leading-relaxed">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti nam minus deserunt, tempora porro minima. Tempora provident maiores quasi velit quisquam unde, assumenda error exercitationem! Consectetur dolore porro veritatis itaque!
+                </p>
+            </div>
         </div>
-
-    <div>
-        <h1>Team</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nesciunt animi explicabo maiores quas temporibus ipsam a illum rem autem. Consequuntur quibusdam, recusandae ullam at aliquid nesciunt possimus sunt odit!
-        Tempora quis obcaecati eum quod enim totam porro ratione sed dolor dignissimos, dolorem quisquam optio, delectus asperiores quas pariatur corrupti nobis, voluptas facere assumenda nemo neque mollitia repudiandae! Ducimus, similique.</p>
-    </div>
-
-    <div>
-        <h1>Collaborations</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti nam minus deserunt, tempora porro minima. Tempora provident maiores quasi velit quisquam unde, assumenda error exercitationem! Consectetur dolore porro veritatis itaque!</p>
-    </div>
-
-
-
     </div>
 </body>
+
 </html>
