--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <nav class="bg-purple-800 flex justify-between py-3">
         <img class="w-20 h-18 pd-5 mx-4" src="images/logo.png" alt="">
-        <ul class="flex py-5 text-2xl text-white font-semibold justify-end">
-            <li class="mx-6 cursor-pointer">Home</li>
-            <li class="mx-6 cursor-pointer"><a href="about.html" class="hover:underline">About</a></li>
-            <li class="mx-6 cursor-pointer">Contact</li>
-        </ul>
+        <div class="flex py-5 text-2xl text-white font-semibold justify-end">
+            <a href="index.html" class="text-lg font-semibold hover:text-gray-400 mx-6">Home</a>
+    <a href="about.html" class="text-lg font-semibold hover:text-gray-400 mx-6">About</a>
+    <a href="contact.html" class="text-lg font-semibold hover:text-gray-400 mx-6">Contact</a>
+    </div>
     </nav>
     <div class="bg-violet-100">
     <main class="bg-violet-100 flex px-4 py-10 pt-3">
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="flex shrink-0 pt-14">
-        <img src="images/team.jpg" class="object-contain h-96" alt=""/>
+        <img src="images/logo.png" class="object-contain h-96" alt=""/>
     </div>
 </main>
 <div class="bg-violet-100 mx-3 my-3 justify-center items-center border-8 border-violet-300 p-4 rounded-3xl">
