commiting updated code

--- a/about.html
+++ b/about.html
@@ -7,28 +7,35 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <div class="bg-purple-800 h-screen text-white">
-        <h1 class="text-center text-4xl font-bold pt-10">About Us</h1>
-        <div class="flex flex-col sm:flex-row justify-evenly items-center h-full px-10 gap-y-10 sm:gap-y-0 sm:gap-x-8">
-            <div class="max-w-md">
-                <h2 class="text-3xl font-bold mb-4">The Idea</h2>
-                <p class="text-lg leading-relaxed">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas, in! Architecto quos nesciunt ab ratione sit! Adipisci, saepe suscipit. Id a perspiciatis libero dicta, accusamus consequatur sit. Repellat, reiciendis consectetur!
+    <div class="bg-purple-800  text-white">
+        <h1 class="text-center text-7xl font-bold pt-10 py-10">About Us</h1>
+        <div class="flex flex-col  justify-evenly items-center  px-10s gap-y-10 sm:gap-y-0 sm:gap-x-8">
+            <div class="mx-36 bg-white p-5 border rounded-3xl my-10 mx-10">
+                <h2 class="text-3xl font-bold mb-4 text-violet-700 text-center">The Idea</h2>
+                <p class="text-lg leading-relaxed text-purple-900">
+                     Quas, in! Architecto quos nesciunt ab ratione sit! Adipisci, saepe suscipit. Id a perspiciatis libero dicta, accusamus consequatur sit. Repellat, reiciendis consectetur!
                     Itaque a alias dolores consectetur repudiandae nemo debitis praesentium eum ullam? Ex aliquid qui cumque, dolor, tempore aspernatur vitae sunt corporis velit iusto a? Soluta tempore accusamus dolor illum voluptatum.
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis aut harum ullam! Velit ad ullam nam aperiam, deserunt nobis sed molestias laudantium nostrum provident accusantium asperiores adipisci officia odio quis?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id dolor magnam quo, eos, laudantium, nemo voluptates ipsa quaerat earum quia culpa quis optio laboriosam sapiente eligendi exercitationem debitis dolorem consequuntur?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nam a minus doloribus harum amet maxime perspiciatis deleniti. Voluptatibus nesciunt iure quas officiis facilis at reprehenderit voluptatum, aspernatur tempora fugiat optio.
                 </p>
             </div>
 
-            <div class="max-w-md">
-                <h2 class="text-3xl font-bold mb-4">Team</h2>
-                <p class="text-lg leading-relaxed">
+            <div class="mx-36 bg-white p-5 border rounded-3xl my-10 mx-10">
+                <h2 class="text-3xl font-bold mb-4  text-violet-700 text-center">Team</h2>
+                <p class="text-lg leading-relaxed text-purple-900">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nesciunt animi explicabo maiores quas temporibus ipsam a illum rem autem. Consequuntur quibusdam, recusandae ullam at aliquid nesciunt possimus sunt odit!
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vitae libero ullam vel eaque minus, quia ut, neque sequi ea quo facere veniam cum nam adipisci, ipsam rerum? 
+                    Amet, culpa aliquam?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptates nemo error, officiis consectetur odit ipsa, ab, aut a rerum voluptatum fugiat placeat rem ipsum autem aspernatur officia nam eum?
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. At nostrum voluptatum officia tempore illum sunt nam optio necessitatibus odio adipisci unde magni, ex expedita recusandae nihil harum accusantium sit ducimus.
                 </p>
             </div>
 
-            <div class="max-w-md">
-                <h2 class="text-3xl font-bold mb-4">Collaborations</h2>
-                <p class="text-lg leading-relaxed">
+            <div class="mx-36 bg-white p-5 border rounded-3xl my-10 mx-10">
+                <h2 class="text-3xl font-bold mb-4  text-violet-700 text-center">Collaborations</h2>
+                <p class="text-lg leading-relaxed text-purple-900">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti nam minus deserunt, tempora porro minima. Tempora provident maiores quasi velit quisquam unde, assumenda error exercitationem! Consectetur dolore porro veritatis itaque!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quas consectetur animi, itaque magni quibusdam provident, sequi quae officiis ad nobis quam id, fuga nihil reprehenderit repellendus aperiam perferendis. Culpa.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eum excepturi atque, natus nostrum optio dolorem fugiat, et, autem sint id perspiciatis. Facilis recusandae nisi amet, quod unde corporis iure.
                 </p>
             </div>
         </div>
