Pushing final code to main branch

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     <nav class="bg-purple-800 flex justify-between py-3">
         <img class="w-20 h-18 pd-5 mx-4" src="images/logo.png" alt="">
         <div class="flex py-5 text-2xl text-white font-semibold justify-end">
-            <a href="index.html" class="text-lg font-semibold hover:text-gray-400 mx-6">Home</a>
-    <a href="about.html" class="text-lg font-semibold hover:text-gray-400 mx-6">About</a>
-    <a href="contact.html" class="text-lg font-semibold hover:text-gray-400 mx-6">Contact</a>
+            <a href="signup.html" class="text-lg font-semibold hover:text-gray-400 mx-6">Sign In</a>
+            <a href="shop.html" class="text-lg font-semibold hover:text-gray-400 mx-6">Shop</a>
+            <a href="about.html" class="text-lg font-semibold hover:text-gray-400 mx-6">About</a>
+            <a href="contact.html" class="text-lg font-semibold hover:text-gray-400 mx-6">Contact</a>
     </div>
     </nav>
     <div class="bg-violet-100">
@@ -24,7 +25,7 @@
         <br><br>
         <div class="buttons">
             <button class="bg-violet-700 w-32 h-12 rounded-3xl text-purple-100 font-semibold hover:text-purple-800 hover:bg-white hover:border-purple-700 hover:border-2 hover:transition-opacity duration-500 cursor-pointer">Sign Up</button>
-            <p class="text-purple-600 cursor-pointer my-6 underline ">Already have an account? Log in</p>
+            <p class="text-purple-600 cursor-pointer my-6 underline "><a href="login.html">Already have an account? Log in</a></p>
         </div>
     </div>
     <div class="flex shrink-0 pt-14">
@@ -55,9 +56,14 @@
         </div>
     </div>
 </div>
-<footer>
-    <div class=""></div>
+<footer class="bg-purple-800 text-white py-4">
+    <div class="container mx-auto text-center">
+      <p>&copy; 2024 BookFreaks. All rights reserved.</p>
+    </div>
 </footer>
+
+</body>
+</html>
 </div>
 </body>
 </html>
