--- a/about.html
+++ b/about.html
@@ -6,11 +6,21 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-gradient-to-b from-purple-900 via-violet-500 to-purple-900 text-white min-h-screen  items-center justify-center">
+    
+    <nav class="flex justify-between py-3">
+        <img class="w-20 h-18 pd-5 mx-4" src="images/logo.png" alt="">
+        <div class="flex py-5 text-2xl text-white font-semibold justify-end">
+            <a href="shop.html" class="text-lg font-semibold hover:text-gray-400 mx-6">Shop</a>
+            <a href="index.html" class="text-lg font-semibold hover:text-gray-400 mx-6">Home</a>
+            <a href="contact.html" class="text-lg font-semibold hover:text-gray-400 mx-6">Contact</a>
+    </div>
+    </nav>
+
     <div class="bg-purple-800  text-white">
-        <h1 class="text-center text-7xl font-bold pt-10 py-10">About Us</h1>
+        <h1 class="text-center text-4xl font-bold pt-10 py-10">About Us</h1>
         <div class="flex flex-col  justify-evenly items-center  px-10s gap-y-10 sm:gap-y-0 sm:gap-x-8">
-            <div class="mx-36 bg-white p-5 border rounded-3xl my-10 mx-10">
+            <div class=" bg-white p-5 border rounded-3xl my-10 mx-5">
                 <h2 class="text-3xl font-bold mb-4 text-violet-700 text-center">The Idea</h2>
                 <p class="text-lg leading-relaxed text-purple-900">
                      Quas, in! Architecto quos nesciunt ab ratione sit! Adipisci, saepe suscipit. Id a perspiciatis libero dicta, accusamus consequatur sit. Repellat, reiciendis consectetur!
@@ -20,7 +30,7 @@
                 </p>
             </div>
 
-            <div class="mx-36 bg-white p-5 border rounded-3xl my-10 mx-10">
+            <div class=" bg-white p-5 border rounded-3xl my-10 mx-5">
                 <h2 class="text-3xl font-bold mb-4  text-violet-700 text-center">Team</h2>
                 <p class="text-lg leading-relaxed text-purple-900">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium nesciunt animi explicabo maiores quas temporibus ipsam a illum rem autem. Consequuntur quibusdam, recusandae ullam at aliquid nesciunt possimus sunt odit!
@@ -30,7 +40,7 @@
                 </p>
             </div>
 
-            <div class="mx-36 bg-white p-5 border rounded-3xl my-10 mx-10">
+            <div class=" bg-white p-5 border rounded-3xl my-10 mx-5">
                 <h2 class="text-3xl font-bold mb-4  text-violet-700 text-center">Collaborations</h2>
                 <p class="text-lg leading-relaxed text-purple-900">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti nam minus deserunt, tempora porro minima. Tempora provident maiores quasi velit quisquam unde, assumenda error exercitationem! Consectetur dolore porro veritatis itaque!
@@ -40,6 +50,11 @@
             </div>
         </div>
     </div>
+    <footer class="bg-purple-800 text-white py-4">
+        <div class="container mx-auto text-center">
+          <p>&copy; 2024 BookFreaks. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
